[tool.poetry]
name = "alien_invasion"
version = "0.1.0"
description = ""
authors = ["agmrv <airatgum@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
alien_invasion = "game.alien_invasion.py:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
